--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,6 +53,8 @@
 
   <script src="/js/html5sortable.min.js"></script>
 
+  <script src="/js/handlebars-v4.1.2.js"></script>
+
   <script src="/js/medium-editor.js"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/css/beagle.min.css" />
