--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -14,6 +14,12 @@ $(function() {
     $('#notificationsPageLink').find('.badge').css('background-color', '#900202');
   }
 
+  $('.clear-all-notifications').click(function() {
+      $.post('/api/notifications/clearall', function(data){
+          $("#notificationsContainer").load( "/api/notification/display" );
+      })
+  })
+
   $("#darkModeToggle").click(function(e){
     e.preventDefault();
     if ($(this).hasClass('notification-active')){
@@ -63,8 +69,8 @@ $(function() {
     {{/eq}}
   }, 60000);
 
-  $('body').on('click', '.open-reply-box', function() {
-    commentsContainer = $(this).closest(".comment").find(".replyContainer");
+  $('body').on('click', '.show-comments', function() {
+    commentsContainer = $(this).closest(".post").find(".comments");
     commentsContainer.slideToggle("fast", function(){
       if (commentsContainer.is(':visible')){
         if(commentsContainer.height() > $(window).height()){
@@ -99,10 +105,10 @@ $(function() {
         text == "Show more" ? "Show less" : "Show more");
   })
   $('body').on('click','.replyEmojiWindowButton', function() {
-    $(this).closest('.contentForm').find('.replyEmojiWindow').slideToggle("fast");
+    $(this).closest('.new-comment-form').find('.replyEmojiWindow').slideToggle("fast");
   })
   $('body').on('click','.replyEmojiWindow>.add-emoji', function() {
-    pasteHtmlAtCaret($(this).closest("#replyForm").find('.editable-comment-content.medium-editor-element'), '<span class="emoji"> ' + event.target.innerHTML + '</span>');
+    pasteHtmlAtCaret($(this).closest(".new-comment-form").find('.editable-comment-content.medium-editor-element'), '<span class="emoji"> ' + event.target.innerHTML + '</span>');
   })
 
     $('#boostersModal').on('show.bs.modal', function (event) {
@@ -155,13 +161,33 @@ $(function() {
     $(this).text(
         text == "Show post" ? "Hide post" : "Show post");
   })
-  $('body').on('click', '.replyToComment', function() {
-    // pasteHtmlAtCaret($(this).closest(".replyContainer").children("#replyForm").find('.editable-comment-content.medium-editor-element'), "@" + $(this).attr("data-username")+"&nbsp;");
-    var commentContainer = $(this).closest('.individualReplyContainer');
+  $('body').on('click', '.reply-to-comment', function() {
+    // First, check if the reply form is already open - if it is, just scroll to it
+    var checkFormExists = $(this).closest('.comment').find('.new-comment-form')
+    if (checkFormExists.length) {
+        if (checkFormExists[0].getBoundingClientRect().bottom > $(window).height()-50){
+            $("html, body").animate({ scrollTop: checkFormExists.offset().top-200 }, 200);
+        }
+        console.log("Form already exists!")
+        return;
+    }
+    // pasteHtmlAtCaret($(this).closest(".replyContainer").children("#commentForm").find('.editable-comment-content.medium-editor-element'), "@" + $(this).attr("data-username")+"&nbsp;");
+    var commentContainer = $(this).closest('.comment');
     var postID = commentContainer.closest('.post').attr("data-post-id");
     var commentID = commentContainer.attr("data-comment-id");
-    commentContainer.append('<div class="childReplyForm contentForm"><div class="form-row"><textarea class="form-control form-control-sm comment-textarea editable-text editable-comment-content" id="commentContent" name="commentContent" style="resize: none;" placeholder="Write a reply." maxlength="9000"></textarea></div><div class="form-row my-2 card p-1 replyEmojiWindow" style="display:none"><button type="button" class="add-emoji">🍬</button><button type="button" class="add-emoji">🍭</button><button type="button" class="add-emoji">🍡</button><button type="button" class="add-emoji">🍩</button><button type="button" class="add-emoji">🍪</button><button type="button" class="add-emoji">🍫</button><button type="button" class="add-emoji">🎂</button<button type="button" class="add-emoji">🍯</button><button type="button" class="add-emoji">🍎</button><button type="button" class="add-emoji">🍑</button><button type="button" class="add-emoji">🍌</button><button type="button" class="add-emoji">🍓</button><button type="button" class="add-emoji">🍇</button><button type="button" class="add-emoji">🍉</button><button type="button" class="add-emoji">🐝</button><button type="button" class="add-emoji">😊</button><button type="button" class="add-emoji">🙃</button><button type="button" class="add-emoji">😍</button><button type="button" class="add-emoji">😂</button><button type="button" class="add-emoji">😭</button><button type="button" class="add-emoji">😬</button><button type="button" class="add-emoji">😆</button><button type="button" class="add-emoji">😩</button><button type="button" class="add-emoji">😩</button><button type="button" class="add-emoji">😱</button><button type="button" class="add-emoji">😒</button><button type="button" class="add-emoji">🖖</button><button type="button" class="add-emoji">🙌</button><button type="button" class="add-emoji">👏</button><button type="button" class="add-emoji">👌</button><button type="button" class="add-emoji">💪</button><button type="button" class="add-emoji">🤦</button><button type="button" class="add-emoji">🌱</button><button type="button" class="add-emoji">🌞</button><button type="button" class="add-emoji">🌝</button><button type="button" class="add-emoji">❤️</button><button type="button" class="add-emoji">💕</button><button type="button" class="add-emoji">💖</button><button type="button" class="add-emoji">🔥</button><button type="button" class="add-emoji">🎉</button><button type="button" class="add-emoji">💯</button><button type="button" class="add-emoji">🏳️‍🌈</button></div><div id="image-preview-holder" class="form-row post-controls image-preview-holder"><input type="file" class="file-input" accept="image/gif, image/jpeg, image/png" aria-label="Choose File" name="postImage" multiple></div><div id="replyControlsRow" class="form-row mt-2 post-controls"><div class="leftSideControls"><button type="button" class="btn btn-primary btn-fade" id="postImageButton"><i class="fas fa-image"></i></button><button type="button" class="btn btn-primary btn-fade replyEmojiWindowButton"><i class="far fa-smile"></i></button></div><div class="rightSideControls"><button type="submit" class="btn btn-primary btn-fade postReply childReply" data-comment-id="' + commentID + '" data-post-id="' + postID + '">Reply <i class="fas fa-chevron-right"></i></button></div></div></div>');
-    reapplyEditor();
+    console.log(postID, commentID)
+    // Create new comment form with Handlebars.js
+    var source = document.getElementById("new-comment-form-template").innerHTML;
+    var template = Handlebars.compile(source);
+    var html = template({post_id: postID, comment_id: commentID, comment_type: 'child'});
+    $(html).appendTo(commentContainer);
+    editor.addElements('.editable-text');
+    tribute.attach($(".editable-comment-content"));
+    //Scroll to newly created form
+    newForm = commentContainer.find('.new-comment-form');
+    if (newForm[0].getBoundingClientRect().bottom > $(window).height()-50){
+        $("html, body").animate({ scrollTop: newForm.offset().top-200 }, 200);
+    }
   })
   $('body').on('click', '.delete-post', function() {
     var element = $(this);
@@ -176,42 +202,50 @@ $(function() {
       }
     });
   })
-  $('body').on('click', '.deleteComment', function() {
-    var element = $(this);
+  $('body').on('click', '.delete-comment', function() {
+    let element = $(this);
+    let counterToChange = element.closest(".post").find(".show-comments").find('.comments-number');
+    var postID = element.closest('.post').attr('data-post-id')
     bootbox.confirm("Are you sure you want to delete this comment?", function(result){
       if (result == true) {
-        let divToDelete = element.closest(".individualReplyContainer");
-        $.post("/deletecomment/"+element.attr("data-post-id")+"/"+element.attr("data-comment-id"), function(data) {
-          divToDelete.fadeOut(function() {
-            divToDelete.remove();
-          });
+        let divToDelete = element.closest(".comment");
+        $.post("/deletecomment/"+postID+"/"+element.attr("data-comment-id"), function(data) {
+            divToDelete.find('.content:first').addClass('comment-deleted-content').html('<p class="comment-deleted-message">Comment deleted</p>');
+            divToDelete.find('header:first').remove();
+            divToDelete.find('footer button.delete-comment:first').remove();
+
+            let newCommentCount = data.numberOfComments;
+            console.log(element)
+            console.log(counterToChange)
+            if(newCommentCount!=0){
+              counterToChange.html(newCommentCount)
+            }else{
+              counterToChange.html("")
+            }
         });
-        let counterToChange = element.closest(".post").find(".open-reply-box").find(".comments-number")[0];
-        let newCommentCount = parseInt(counterToChange.textContent)-1;
-        if(newCommentCount!=0){
-          counterToChange.innerHTML = counterToChange.innerHTML.replace((newCommentCount+1), newCommentCount);
-        }else{
-          counterToChange.innerHTML = counterToChange.innerHTML.replace( (newCommentCount+1),"");
-        }
       }
     });
   })
-  $('body').on('click', '.postReply', function() {
-    let replyType = ($(this).hasClass('childReply')) ? "child" : "primary";
+  $('body').on('click', '.create-comment', function() {
     let commentButton = $(this);
-    let replyForm = commentButton.closest('.contentForm');
-    let textarea = replyForm.find("textarea.comment-textarea");
-    let contentEditable = replyForm.find("div.comment-textarea");
+    let commentForm = commentButton.closest('.new-comment-form');
+    let commentType = commentForm.attr('data-comment-type');
+    let postID = commentForm.attr('data-post-id');
+    let commentID = commentForm.attr('data-comment-id');
+    let textarea = commentForm.find("textarea.comment-textarea");
+    let contentEditable = commentForm.find("div.comment-textarea");
     let commentContent = textarea.val();
-    if (replyType == "primary") {
-        let commentsContainer = commentButton.closest('.replyContainer').find('.repliesContainer');
+    let commentDepth = 1;
+    if (commentType == "primary") {
+        commentsContainer = commentButton.closest('.comments').find('.comments-container');
     }
-    else if (replyType == "child") {
-        let commentsContainer = commentButton.closest('.replyContainer').find('.individualReplyContainer');
+    else if (commentType == "child") {
+        commentsContainer = commentButton.closest('.comments-container').find('.comment[data-comment-id='+commentID+']').find('.replies')[0];
+        commentDepth = parseInt(commentForm.closest('.comment').attr('data-comment-depth'))+1;
     }
-    let emojiWindow = replyForm.find('.replyEmojiWindow');
+    let emojiWindow = commentForm.find('.replyEmojiWindow');
 
-    let pc = replyForm.find('#image-preview-holder')[0];
+    let pc = commentForm.find('#image-preview-holder')[0];
 
     var sortedurls = []; //will contain urls in preview-window order, instead of the order in which they were recieved from the server
     var imagedescs = [];
@@ -231,44 +265,42 @@ $(function() {
 
     if (commentContent.replace(/<[^>]*>/g, "") != "" || sortedurls.length > 0) { // Filter out empty comments
       commentButton.prop('disabled', true);
-      $.post("/createcomment/"+replyType+"/"+$(this).attr("data-post-id")+"/"+$(this).attr("data-comment-id"),
+      $.post("/createcomment/"+postID+"/"+commentID,
       { commentContent: commentContent,
         imageUrls: JSON.stringify(sortedurls),
-        imageDescs: JSON.stringify(imagedescs)
+        imageDescs: JSON.stringify(imagedescs),
+        depth: commentDepth,
       },
       function(data) {
         if (data!='nope'){
           textarea.val("");
           contentEditable.html("");
-          console.log(sortedurls.length)
-          classNames = ['one-image','two-images','three-images','four-images'];
-          let html = '<div class="individualReplyContainer" data-comment-id="'+ data.comment_id + '"><div class="mb-1 d-flex"><img class="postAuthorImage" style="width:25px;height:25px;border-radius:3px;" src="/images/' + data.image + '" /><div class="comment-header"><div class="comment-header-row-1">' + data.name + '<div class="comment-header-divider">&middot;</div><div class="commentTimestamp"><small class="text-muted">' + data.timestamp + '</small></div><button type="button" class="btn btn-link btn-xs replyToComment comment-button" data-username="' + data.username + '"><i class="fas fa-reply"></i></button><button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="'+ data.comment_id + '" data-post-id="' + data.post_id + '" data-comment-id="'+data.comment_id+'">&times;</button></div></div></div><div class="comment-content">' + data.content + (sortedurls.length>0 ? '<div class="post-images '+classNames[sortedurls.length-1]+'"'+(sortedurls.length>1 ? ' data-featherlight-gallery data-featherlight-filter="a"' : '')+'>' : '');
-          for (let i=0; i<sortedurls.length;i++){
-            html += (sortedurls.length>1 ? '<a href="/api/image/display/'+sortedurls[i]+'">' : '')+'<img alt="'+imagedescs[i]+' (posted by '+$('.navbar-username')[0].innerHTML+')" class="post-single-image" src="/api/image/display/'+sortedurls[i]+'" '+(sortedurls.length==1 ? 'data-featherlight="/api/image/display/'+sortedurls[i]+'"' : '')+'>'+(sortedurls.length>1 ? '</a>' : '');
-          }
-          html += (sortedurls.length>0 ? '</div>' : '');
-          html+='</div></div>';
-          $(html).hide().appendTo(commentsContainer).fadeIn();
-          commentButton.prop('disabled', false);
-          let counterToChange = commentButton.closest(".post").find(".open-reply-box").find('.comments-number')[0];
+          $(data.comment).hide().appendTo(commentsContainer).fadeIn();
+          let counterToChange = commentButton.closest(".post").find(".show-comments").find('.comments-number')[0];
           if(counterToChange.textContent === ""){
             counterToChange.innerHTML = "1";
           } else {
             let newCommentCount = parseInt(counterToChange.textContent)+1;
             counterToChange.innerHTML = counterToChange.innerHTML.replace((newCommentCount-1), newCommentCount);
           }
-          emojiWindow.hide();
-          $(pc).children('.newimagecont').remove(); //removes all image preview windows
+          // Reset (or DESTROY) comment form
+          if (commentType == "primary") {
+              commentButton.prop('disabled', false);
+              emojiWindow.hide();
+              $(pc).children('.newimagecont').remove(); //removes all image preview windows
+          }
+          else if (commentType == "child") {
+              commentForm.remove();
+          }
           pc.uploadsStarted = 0;
           pc.uploadsCompleted = 0;
           pc.uploadsCancelled = 0;
           pc.uploadedImageUrls = [];
           pc.imageUploadRequests = [];
-        }
-        else {
-          let html = '<div class="individualReplyContainer"><div class="alert alert-danger">There has been a problem posting your comment. Sorry! Please copy the comment text, refresh the page, and try again.</div></div>'
+        } else {
+          let html = '<article class="comment"><div class="alert alert-danger">There has been a problem posting your comment. Sorry! Please copy the comment text, refresh the page, and try again.</div></article>'
           $(html).hide().appendTo(commentsContainer).fadeIn();
-          commentButton.prop('disabled', false);
+          // commentButton.prop('disabled', false); // Probably don't disable the reply button if an error occurs because god knows what else has happened to the form
         }
       });
     }
