--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -93,7 +93,7 @@ $('#postsContainer').infiniteScroll({
     var pageNumber = ( this.loadCount + 1 );
     return '/showposts/user/{{profileData._id}}/' + pageNumber;
   },
-  append: '.commentContainer',
+  append: '.post',
   prefill: true,
   history: false,
   status: '.page-load-status'
