--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -93,18 +93,20 @@
             {{/unless}}
             {{#eq this.privacy "public"}}
                 {{#if ../loggedIn}}
-                    <form action="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}" method="post" class="post-toolbar-form">
-                        <button type="submit" class="button post-toolbar-button boost-post">
-                            {{#if youBoosted}}
-                                <span class="fa-layers fa-fw">
+                    {{#isnt this.type "community"}}
+                        <form action="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}" method="post" class="post-toolbar-form">
+                            <button type="submit" class="button post-toolbar-button boost-post">
+                                {{#if youBoosted}}
+                                    <span class="fa-layers fa-fw">
+                                        <i class="fas fa-retweet"></i>
+                                        <i class="fas fa-slash" data-fa-transform="rotate-90"></i>
+                                    </span>
+                                {{else}}
                                     <i class="fas fa-retweet"></i>
-                                    <i class="fas fa-slash" data-fa-transform="rotate-90"></i>
-                                </span>
-                            {{else}}
-                                <i class="fas fa-retweet"></i>
-                            {{/if}}
-                        </button>
-                    </form>
+                                {{/if}}
+                            </button>
+                        </form>
+                    {{/isnt}}
                 {{/if}}
             {{/eq}}
             <a class="button post-toolbar-button" href="/{{this.author.username}}/{{this.url}}">
