--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -1,4 +1,21 @@
 <script type="text/javascript">
+
+$(window).scroll(function() {
+    $(".recent-comment-content:not(.flash-triggered)").each(function(){
+        var top_of_element = $(this).offset().top;
+        var bottom_of_element = $(this).offset().top + $(this).outerHeight();
+        var bottom_of_screen = $(window).scrollTop() + window.innerHeight;
+        var top_of_screen = $(window).scrollTop();
+
+        if((bottom_of_screen > top_of_element) && (top_of_screen < bottom_of_element)){
+            $(this).addClass('flash')
+            setTimeout(function(){
+                element.addClass('flash')
+            }, 5000);
+        }
+    });
+});
+
 $(function() {
   $('body').tooltip({
     selector: '[data-toggle="tooltip"]'
