--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -1,20 +1,21 @@
 <script type="text/javascript">
+{{#if loggedInUserData.settings.flashRecentComments}}
+    $(window).scroll(function() {
+        $(".recent-comment-content").each(function(){
+            var top_of_element = $(this).offset().top;
+            var bottom_of_element = $(this).offset().top + $(this).outerHeight();
+            var bottom_of_screen = $(window).scrollTop() + window.innerHeight;
+            var top_of_screen = $(window).scrollTop();
 
-$(window).scroll(function() {
-    $(".recent-comment-content:not(.flash-triggered)").each(function(){
-        var top_of_element = $(this).offset().top;
-        var bottom_of_element = $(this).offset().top + $(this).outerHeight();
-        var bottom_of_screen = $(window).scrollTop() + window.innerHeight;
-        var top_of_screen = $(window).scrollTop();
-
-        if((bottom_of_screen > top_of_element) && (top_of_screen < bottom_of_element)){
-            $(this).addClass('flash')
-            setTimeout(function(){
-                element.addClass('flash')
-            }, 5000);
-        }
+            if((bottom_of_screen > top_of_element) && (top_of_screen < bottom_of_element)){
+                $(this).addClass('flash')
+                setTimeout(function(){
+                    element.removeClass('flash')
+                }, 5000);
+            }
+        });
     });
-});
+{{/if}}
 
 $(function() {
   $('body').tooltip({
