--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -52,6 +52,14 @@
           <option value="fluid" {{#eq loggedInUserData.settings.communityTimelineSorting "fluid"}}selected{{/eq}}>Fluid (recently commented and boosted posts move to the top)</option>
         </select>
       </div>
+        <div class="form-group">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="flashRecentComments" id="flashRecentComments" {{#if loggedInUserData.settings.flashRecentComments}}checked{{/if}}>
+                <label class="form-check-label" for="flashRecentComments">
+                    Flash recent comments
+                </label>
+            </div>
+        </div>
       <button type="submit" class="btn btn-secondary">Save settings</button>
     </form>
   </div>
