Initial commit - working example

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -59,6 +59,8 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="/css/beagle.min.css" />
 
+  {{> socket }}
+
   {{> helperscripts }}
 
 </head>
