--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,9 +212,19 @@ section.comments {
   border: 1px solid #eaeaea;
 }
 .post-single-image {
-  border: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
-.post-single-image:hover {
+.post-images.two-images .post-single-image:hover,
+.post-images.three-images .post-single-image:hover,
+.post-images.four-images .post-single-image:hover {
+  border: 1px solid #9b9b9b;
+}
+.post-images.one-image {
+  border: 1px solid transparent;
+  transition: border 100ms ease-in;
+      border-radius: 4px;
+}
+.post-images.one-image:hover {
   border: 1px solid #9b9b9b;
 }
 .image-clear {
@@ -1166,7 +1176,7 @@ hr {
 .post-single-image > img {
   object-fit: cover;
   cursor: pointer;
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   max-height: 400px;
   transition: border 100ms ease-in;
@@ -1184,6 +1194,7 @@ background-size: 5.66px 5.66px;
 .post-images.one-image > a {
   object-fit: contain;
   height:auto;
+  text-align: center;
 }
 
 .post-images.two-images {
@@ -1355,18 +1366,6 @@ background-size: 5.66px 5.66px;
 .subscribed-alert a{
   font-weight: 500;
 }
-
-.featherlight-next:hover, .featherlight-previous:hover {
-    background: none !important;
-}
-
-.featherlight-next span, .featherlight-previous span {
-  text-shadow: 0 0 8px rgba(0,0,0,0.6) !important;
-}
-
-/* .featherlight-next::before {
-  content: '\f054'
-} */
 
 #welcome-message-container {
   padding: 15px;
