--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,6 +227,10 @@ section.comments {
 .post-images.one-image:hover {
   border: 1px solid #9b9b9b;
 }
+.post-images.one-image .post-single-image {
+    width: auto;
+    max-width: 100%;
+}
 .image-clear {
   background-color: #ffffff99;
   color: #000000;
@@ -1176,7 +1180,7 @@ hr {
 .post-single-image > img {
   object-fit: cover;
   cursor: pointer;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   max-height: 400px;
   transition: border 100ms ease-in;
